# sphinx_example_includer

./: README-pypi.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/sphinx_example_includer/: __main__.py  common.py  includer.py  sphinxgen.py
tests/: test_clean_index.py  test_cli.py  test_generate_examples.py  test_generate_toc.py  test_sphinx_gen.py
