[project]
name = "sphinx_example_includer"
version = "0.5"
authors = [
  { name="Ahmad Alobaid", email="ahmad88me@gmail.com"},
]
description = "Include code examples to sphinx documentation"
readme = "README-pypi.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Documentation",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "tomli>=2.0.1",
]
[project.urls]
Homepage = "https://github.com/ahmad88me/sphinx_example_includer"
Issues = "https://github.com/ahmad88me/sphinx_example_includer/issues"

